src/test/rustdoc-ui/intra-doc-alias-ice.stderr
error: `[TypeAlias::hoge]` cannot be resolved, ignoring it...
  --> $DIR/intra-doc-alias-ice.rs:5:30
   |
LL | /// [broken cross-reference](TypeAlias::hoge)
   |                              ^^^^^^^^^^^^^^^ cannot be resolved, ignoring
   |
note: lint level defined here
  --> $DIR/intra-doc-alias-ice.rs:1:9
   |
LL | #![deny(intra_doc_link_resolution_failure)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`

error: aborting due to previous error

